syntax = "proto3";
option java_multiple_files = true;
package iit.inv.grpc.generated;

message CheckInventoryItemStockRequest {
  int32 itemId = 1;
}

message CheckInventoryItemStockResponse {
  int32 itemStock = 1;
}

service InventoryService {
  //Check inventory stock available
  rpc checkInventoryItemStock(CheckInventoryItemStockRequest) returns (CheckInventoryItemStockResponse);
}
